blueprints/gke/autopilot/bundle/locust/workers.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: locust-worker
  namespace: locust
  labels:
    name: locust-worker
spec:
  replicas: 5
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
    spec:
      tolerations:
        - key: group
          operator: Equal
          value: "locust"
          effect: NoSchedule
      nodeSelector:
        group: "locust"
      containers:
        - name: locust-worker
          image: load-test-image
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            memory: 50Mi
