blueprints/gke/autopilot/bundle/locust/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: locust
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "locust"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: locust-master-web
      port:
        name: loc-master-web
